completed exercise 3 - grouping selectors

--- a/foundations/intro-to-css/03-grouping-selectors/style.css
+++ b/foundations/intro-to-css/03-grouping-selectors/style.css
@@ -1,1 +1,14 @@
 /* Add CSS Styling */
+.button {
+    background-color: black;
+    color: white;
+}
+
+.newButton {
+    background-color: yellow;
+}
+
+.button, .newButton {
+    font-size: 28px;
+    font: Helvetica, 'Times New Roman', sans-serif;
+}
